# danbooru-tag-rag

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  download_model.py  index.html  pyproject.toml  test.html
core/: __init__.py  api.py  benchmark.py  benchmark_decompose.py  benchmark_split.py  builder.py  config.py  database.py  embeddings.py  genlog.py  llm.py  llm_decompose.py  pipeline.py  pipeline_decomposed.py  pipeline_split.py  search.py
src/: api.py  benchmark.py  builder.py  config.py  exceptions.py  parser.py  search.py
