[project]
name = "danbooru-rag"
version = "0.1.0"
description = "Danbooru 태그 RAG 검색 도구 (2-pass cross-lingual, 로컬 LLM)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "httpx>=0.27",
    "lancedb>=0.6",
    "sentence-transformers>=2.6",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.scripts]
danbooru-rag = "danbooru_rag.api:main"
danbooru-rag-build = "danbooru_rag.builder:build_all"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["danbooru_rag*"]
