[project]
name = "danbooru-tags-rag"
version = "0.1.0"
description = "Korean-to-Danbooru tag search with hallucination-free 2-pass cross-lingual RAG (local embeddings + local LLM)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "httpx>=0.27",
    "lancedb>=0.6",
    "sentence-transformers>=2.6",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.scripts]
danbooru-rag = "core.api:main"
danbooru-rag-build = "core.builder:build_all"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
